--- a/2020/code-examples/10-todo-example/package.json
+++ b/2020/code-examples/10-todo-example/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "mysql2": "^2.2.5"
   }
 }
